--- a/Projecte0/Projecte0/Projecte0.csproj
+++ b/Projecte0/Projecte0/Projecte0.csproj
@@ -8,7 +8,23 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Vista\Imagenes\MapaRestaurant2.png" />
+    <None Remove="Vista\Imagenes\Taula1.PNG" />
+    <None Remove="Vista\Imagenes\taula2.PNG" />
+    <None Remove="Vista\Imagenes\taula3.PNG" />
+    <None Remove="Vista\Imagenes\taula4.PNG" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="MySql.Data" Version="8.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Vista\Imagenes\MapaRestaurant2.png" />
+    <Resource Include="Vista\Imagenes\Taula1.PNG" />
+    <Resource Include="Vista\Imagenes\taula2.PNG" />
+    <Resource Include="Vista\Imagenes\taula3.PNG" />
+    <Resource Include="Vista\Imagenes\taula4.PNG" />
   </ItemGroup>
 
 </Project>
