--- a/Projecte0/Projecte0/Projecte0.csproj
+++ b/Projecte0/Projecte0/Projecte0.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="SplashScreen1.png" />
     <None Remove="Vista\Imagenes\MapaRestaurant2.png" />
     <None Remove="Vista\Imagenes\Taula1.PNG" />
     <None Remove="Vista\Imagenes\taula2.PNG" />
@@ -25,6 +26,10 @@
     <Resource Include="Vista\Imagenes\taula2.PNG" />
     <Resource Include="Vista\Imagenes\taula3.PNG" />
     <Resource Include="Vista\Imagenes\taula4.PNG" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <SplashScreen Include="SplashScreen1.png" />
   </ItemGroup>
 
 </Project>
